--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -4,7 +4,7 @@
 <!------ Include the above in your HEAD tag ---------->
 
 <div class="container">
-    <h1>canbrian</h1>
+    <h1>Cambrian</h1>
     <div class="card card-container">
         <!-- <img class="profile-img-card" src="//lh3.googleusercontent.com/-6V8xOA6M7BA/AAAAAAAAAAI/AAAAAAAAAAA/rzlHcD0KYwo/photo.jpg?sz=120" alt="" /> -->
         <p>Upload an image and I will tell you if it is a cat or dog.</p>
